tests/paczka1/fuzzy1/14307767.err
Error in line 1: ZpSM0C A260 78,6
Error in line 2: ZpSM0C S479 13,7
Error in line 6: ZpSM0C S423 18,1
Error in line 10: yegoA A260 12,5
Error in line 20: yegoA A665 13,2
Error in line 26: yegoA S479 97,1
Error in line 27: v7mInRFD A665 79,5
Error in line 32: aFpjQ S423 82,6
